ateramos a fonte do google

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Document</title>
 
     <link rel="stylesheet"href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">z
     
 </head>
 <body>
-    <header>O Roteiro Perfeito</header>
+    <header> O Roteiro Perfeito</header>
 <h1>Dos clássicos aos lançamentos, aqui tem sempre o roteiro Perfeito</h1>  
 <p>As melhores recomendações para vocẽ</p>
 
