--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div>
 <h1>Dos clássicos aos lançamentos, aqui tem sempre o roteiro perfeito</h1>  
 <p>As melhores recomendações para vocẽ</p>         </div>
-        <div>
+    </div>
+
+    <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FKy5DyTEnj4?si=SjmrDIBy8WSQdmFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div> 
 </section>
