--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header> O Roteiro Perfeito</header>
      <section>   
-    <div>
+    <div class="chamada-texto">
 <h1>Dos clássicos aos lançamentos, aqui tem sempre o roteiro perfeito</h1>  
 <p>As melhores recomendações para vocẽ</p>         </div>
     </div>
