inserimos nova recomendação

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FKy5DyTEnj4?si=SjmrDIBy8WSQdmFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div> 
+
 </section>
+
+<section>
+    <h2>Vários filmes e séries disponíveis!</h2>
+    <div>
+        <a href="https://www.youtube.com/watch?v=P273sRlm4tM"></a>
+        <img src="https://img.youtube.com/P273sRlm4tM/maxresdefault.jpg" alt="">
+    </div>
+<section>
+    
+</body>
+
     </body>
 </html>
