--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
 <section>
     <h2>Vários filmes e séries disponíveis!</h2>
     <div>
-        <a href="https://www.youtube.com/watch?v=P273sRlm4tM"></a>
-        <img src="https://img.youtube.com/P273sRlm4tM/maxresdefault.jpg" alt="">
+        <a href="https://www.youtube.com/watch?v=CT2_P2DZBR0"></a>
+        <img src="F1 filme.png" alt="">
+
+        <a href="https://www.youtube.com/watch?v=GGBgf8dcgyY"></a>
+        <img src="toy story 5.png" alt="">
+
+        <a href="https://www.youtube.com/watch?v=sEgPQ7HKoBA"></a>
+        <img src="zootopia 2.png" alt="">
+
+        <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo"></a>
+        <img src="harry potter .png" alt="">
+
+
+        
+
+
     </div>
 <section>
     
