--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header> O Roteiro Perfeito</header>
-     <section>   
+     <section class="chamada">   
     <div class="chamada-texto">
 <h1>Dos clássicos aos lançamentos, aqui tem sempre o roteiro perfeito</h1>  
 <p>As melhores recomendações para vocẽ</p>         </div>
@@ -27,19 +27,22 @@
 
 <section>
     <h2>Vários filmes e séries disponíveis!</h2>
-    <div>
+    <div class= "Vário filmes e séries disponíveis!" >
         <a href="https://www.youtube.com/watch?v=CT2_P2DZBR0"></a>
         <img src="F1 filme.png" alt="">
 
         <a href="https://www.youtube.com/watch?v=GGBgf8dcgyY"></a>
         <img src="toy story 5.png" alt="">
 
-        <a href="https://www.youtube.com/watch?v=sEgPQ7HKoBA"></a>
-        <img src="zootopia 2.png" alt="">
+        <a href="https://www.youtube.com/watch?v=W_H7_tDHFE8"></a>
+        <img src="filme os carros.png" alt="">
 
         <a href="https://www.youtube.com/watch?v=VyHV0BRtdxo"></a>
         <img src="harry potter .png" alt="">
 
+        a href="https://www.youtube.com/watch?v=t_ULBP6V9bg&t=6s"></a>
+        <img src="vingadores guerra infinita .png" alt="">
+        
 
         
 
