mudei imagens dos filmes

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <h2>Vários filmes e séries disponíveis!</h2>
     <div class= "Vário filmes e séries disponíveis!" >
         <a href="https://www.youtube.com/watch?v=CT2_P2DZBR0"></a>
-        <img src="F1 filme.png" alt="">
+        <img src="f1 filme novo.png"">
 
         <a href="https://www.youtube.com/watch?v=GGBgf8dcgyY"></a>
-        <img src="toy story 5.png" alt="">
+        <img src=" toy story 5 NOVO.png" alt="">
 
         <a href="https://www.youtube.com/watch?v=W_H7_tDHFE8"></a>
         <img src="filme os carros.png" alt="">
