--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="f1 filme novo.png"">
 
         <a href="https://www.youtube.com/watch?v=GGBgf8dcgyY"></a>
-        <img src=" toy story 5 NOVO.png" alt="">
+        <img src="toy story NOVO.png" alt="">
 
         <a href="https://www.youtube.com/watch?v=W_H7_tDHFE8"></a>
         <img src="filme os carros.png" alt="">
